[Task][Integration] Display tenant list
