# server/src/user/dto/fetch-users.dto.ts
@@ -1,7 +1,7 @@
 import { PickType } from '@nestjs/swagger';
 import { User as UserEntity } from '../../_gen-prisma-classes/user';
 
-export class AllUsersResponseDto extends PickType(UserEntity, [
+export class FindAllUsersResponseDto extends PickType(UserEntity, [
   'id',
   'name',
   'contact',
